--- a/src/common/aside.html
+++ b/src/common/aside.html
@@ -2,10 +2,7 @@
     <!-- 个人资料 -->
     <div class="profile">
         <!-- 头像 -->
-        <div class="avatar img-circle">
-            <img src="/src/public/uploads/avatar.jpg">
-        </div>
-        <h4>布头儿</h4>
+        <!--动态生成用户信息-->
     </div>
     <!-- 导航菜单 -->
     <div class="navs">
@@ -85,3 +82,9 @@
         </ul>
     </div>
 </div>
+<script type="text/template" id="aside_tpl">
+    <div class="avatar img-circle">
+        <img src="{{tc_avatar}}">
+    </div>
+    <h4>{{tc_name}}</h4>
+</script>
