--- a/src/common/script.html
+++ b/src/common/script.html
@@ -1,5 +1,2 @@
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/node_modules/nprogress/nprogress.js"></script>
-<script src="/node_modules/echarts/dist/echarts.min.js"></script>
-<script src="/src/public/js/common.js"></script>
+<script src="/node_modules/requirejs/require.js"></script>
+<script src="/src/public/js/main.js"></script>
